@@ -1,6 +1,8 @@
 bzr (2.3.0~beta2-2) UNRELEASED; urgency=low
 
   * Add testtools to build dependencies.
+  * Run tests by default again, unless "nocheck" is present in
+  DEB_BUILD_OPTIONS. (per policy)
 
  -- Jelmer Vernooij <jelmer@debian.org>  Wed, 20 Oct 2010 15:58:21 +0200
 
